Fix Chrome/Edge underlying text color
when using VisualEditor sourcetext mode with CodeMirror
where text marked by the Chrome/Edge grammar/spelling checkers
does not observe the -webkit-text-fill-color: transparent rule,
interferring and overlapping with the CodeMirror highlighted text.

This also ensure that when the editable text is selected,
user can still read the text in highlighted colors.

ERM40541

[5.1.x]

--- a/resources/stylesheets/fixes/ve-fixes.css
+++ b/resources/stylesheets/fixes/ve-fixes.css
@@ -30,3 +30,10 @@ body.mediawiki .ve-init-sa-target-toolbar > .oo-ui-toolbar-bar > .oo-ui-toolbar-
 .ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface > .ve-ce-surface .ve-ce-attachedRootNode {
 	min-height: 15em;
 }
+
+/* Fix Chrome/Edge underlying text color - ERM40541 */
+.ve-ce-documentNode-codeEditor-webkit-hide::spelling-error,
+.ve-ce-documentNode-codeEditor-webkit-hide::grammar-error,
+.ve-ce-documentNode-codeEditor-webkit-hide::selection {
+    color: transparent;
+}
